--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "resume site",
   "main": "app.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "author": "Anatolii Yatsenko",
   "license": "ISC",
